
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
typedef int calculated_number ;
typedef int RRDCALC ;



int health_variable_lookup(const char *variable, uint32_t hash, RRDCALC *rc, calculated_number *result) {
 (void)variable;
 (void)hash;
 (void)rc;
 (void)result;

 return 0;
}
